src/test/deca/syntax/valid/test_mathis.deca
class A {
  int afficher() {
    println("Magie");
    return 1;
  }
}
{
  A a;
}
