src/test/deca/syntax/invalid/mauvais_asm_1.deca
// Description:
//    asm avec autre chose que mutli_line_string 
//
// Resultats:
//   

class A extends {
	int F asm (a);	
}